# ezhttp

./: Cargo.toml  README.md
examples/: parallel_sites.rs  request_meex.rs  simple_site.rs  small_site.rs
src/: body.rs  error.rs  headers.rs  lib.rs  main.rs  request.rs  response.rs
src/client/: client.rs  mod.rs  req_builder.rs
src/ezhttp/: body.rs  error.rs  handler.rs  headers.rs  mod.rs  request.rs  response.rs  starter.rs
src/ezhttp/client/: client.rs  mod.rs  proxy.rs  req_builder.rs
src/ezhttp/server/: handler.rs  mod.rs  starter.rs
src/server/: mod.rs
tests/: url_test.rs
