[package]
name = "ezhttp"
version = "0.1.4"
edition = "2021"

repository = "https://github.com/MeexReay/ezhttp"
description = "easy http server for small sites"
license-file = "LICENSE"
readme = "README.md"
keywords = ["http", "server", "site", "async"]

[dependencies]
urlencoding = "2.1.3"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
rusty_pool = "0.7.0"