[package]
name = "ezhttp"
version = "0.2.2"
edition = "2021"

repository = "https://git.meex.lol/MeexReay/ezhttp"
description = "Simple async http library with client and server"
license-file = "LICENSE"
readme = "README.md"
keywords = ["http", "server", "site", "async"]

[dependencies]
urlencoding = "2.1.3"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tokio-io-timeout = "1.2.0"
threadpool = "1.8.1"
rand = "0.8.5"
mime_guess = "2.0.5"
openssl = "0.10.68"
tokio-openssl = "0.6.5"
tokio-socks = "0.5.2"
base64 = "0.22.1"
async-trait = "0.1.85"